@@ -1,25 +1,31 @@
+;--------------------------------------------------------------------------
+;  cnvfrac.S - convertion routine of 24 bits floating point to ASCII
 ;
-; Convertion routine of 24 bits floating point to ASCII
+;  Copyright (C) 2004, Vangelis Rokas <vrokas at otenet.gr>
 ;
-; written by Vangelis Rokas <vrokas AT otenet.gr>, 2004
+;  This library is free software; you can redistribute it and/or modify it
+;  under the terms of the GNU General Public License as published by the
+;  Free Software Foundation; either version 2.1, or (at your option) any
+;  later version.
 ;
+;  This library is distributed in the hope that it will be useful,
+;  but WITHOUT ANY WARRANTY; without even the implied warranty of
+;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+;  GNU General Public License for more details.
 ;
-; This program is free software; you can redistribute it and/or
-; modify it under the terms of the GNU Library General Public License
-; as published by the Free Software Foundation; either version 2
-; of the License, or (at your option) any later version.
+;  You should have received a copy of the GNU General Public License 
+;  along with this library; see the file COPYING. If not, write to the
+;  Free Software Foundation, 51 Franklin Street, Fifth Floor, Boston,
+;   MA 02110-1301, USA.
 ;
-; This library is distributed in the hope that it will be useful,
-; but WITHOUT ANY WARRANTY; without even the implied warranty of
-; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-; GNU General Public License for more details.
-;
-; You should have received a copy of the GNU General Public License
-; along with this program; if not, write to the Free Software
-; Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
-;
-; $Id$
-;
+;  As a special exception, if you link this library with other files,
+;  some of which are compiled with SDCC, to produce an executable,
+;  this library does not by itself cause the resulting executable to
+;  be covered by the GNU General Public License. This exception does
+;  not however invalidate any other reasons why the executable file
+;  might be covered by the GNU General Public License.
+;--------------------------------------------------------------------------
+
 	radix dec
 	list
 	nolist
